Make links protable.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/experimental/browser.layout.html
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/experimental/browser.layout.html
@@ -19,7 +19,7 @@ html, body {
 <body>
 <div>splitcells.net</div>
 <div class="net-splitcells-website-column">
-    <iframe src="https://localhost:8443/"></iframe>
+    <iframe src="/"></iframe>
 </div>
 </body>
 </html>
