--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/experimental/desktop.layout.html
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/experimental/desktop.layout.html
@@ -30,14 +30,14 @@
          style="display:inline-block; transform: scale(-1, 1);" id="net-splitcells-website-desktop-window-3">
         <h1><a href="#net-splitcells-website-desktop-window-3">splitcells.net</a></h1>
         <div class="net-splitcells-website-desktop-tab">
-            <iframe src="https://localhost:8443/"
+            <iframe src="/"
                     class="net-splitcells-website-desktop-tab"></iframe>
         </div>
     </div>
     <div class="desktop_window" style="display:inline-block" id="net-splitcells-website-desktop-window-4">
         <h1><a href="#net-splitcells-website-desktop-window-4">splitcells.net</a></h1>
         <div class="net-splitcells-website-desktop-tab">
-            <iframe src="https://localhost:8443/"
+            <iframe src="/"
                     class="net-splitcells-website-desktop-tab" style=" "></iframe>
         </div>
     </div>
