#99 Add licensing metadata to HTML files.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/404.html
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/404.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html>
+<!--
+Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+
+This program and the accompanying materials are made available under the
+terms of the Eclipse Public License 2.0, which is available at
+http://www.eclipse.org/legal/epl-2.0, or the MIT License,
+which is available at https://spdx.org/licenses/MIT.html.
+
+SPDX-License-Identifier: EPL-2.0 OR MIT
+-->
 <head>
-	<title>splitcells.net</title>
-	<meta charset="utf-8"/>
-	<meta http-equiv="refresh" content="0; url=/2017/06/04/http-404-not-found.html"/>
-	<script type="text/javascript">window.location = "/2017/06/04/http-404-not-found.html";</script>
+    <title>splitcells.net</title>
+    <meta charset="utf-8"/>
+    <meta http-equiv="refresh" content="0; url=/2017/06/04/http-404-not-found.html"/>
+    <script type="text/javascript">window.location = "/2017/06/04/http-404-not-found.html";</script>
 </head>
 <body/>
 </html>
