--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/den/test.html
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/den/test.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html style="font-family: Arial, Helvetica, sans-serif">
+<!--
+Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
 
+This program and the accompanying materials are made available under the
+terms of the Eclipse Public License 2.0, which is available at
+http://www.eclipse.org/legal/epl-2.0, or the MIT License,
+which is available at https://spdx.org/licenses/MIT.html.
+
+SPDX-License-Identifier: EPL-2.0 OR MIT
+-->
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="./style.css"> </head>
