--- a/projects/net.splitcells.cin/src/main/html/net/splitcells/cin/renderer.fullscreen.html
+++ b/projects/net.splitcells.cin/src/main/html/net/splitcells/cin/renderer.fullscreen.html
@@ -1,27 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<s:article xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xl="http://www.w3.org/1999/xlink"
-           xmlns:d="http://splitcells.net/den.xsd" xmlns:p="http://splitcells.net/private.xsd"
-           xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-           xmlns:g="http://splitcells.net/gal.xsd" xmlns:foaf="http://xmlns.com/foaf/0.1/"
-           xmlns:s="http://splitcells.net/sew.xsd"
-           xmlns="http://www.w3.org/1999/xhtml"
-           xmlns:n="http://splitcells.net/natural.xsd" xmlns:e="http://splitcells.net/sen.xsd">
-    <s:meta>
-        <s:title>Crisis Network Renderer</s:title>
-    </s:meta>
-    <s:content>
-        <div id="net-splitcells-canvas-main"/>
-        <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-        <script src="https://unpkg.com/papaparse@5.3.2/papaparse.min.js"/>
-        <script type="importmap"><![CDATA[
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Crisis Network Renderer</title>
+    <meta charset="utf-8">
+</head>
+<body>
+<div id="net-splitcells-canvas-main">
+
+</div>
+<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+<script src="https://unpkg.com/papaparse@5.3.2/papaparse.min.js"></script>
+<script type="importmap">
             {
             "imports": {
             "three": "https://unpkg.com/three@0.139.0/build/three.module.js",
             "OrbitControls": "https://unpkg.com/three@0.139.0/examples/jsm/controls/OrbitControls.js"
                 }
             }
-            ]]></script>
-        <script type="module"><![CDATA[
+
+</script>
+<script type="module">
             import * as THREE from 'three';
 			import { OrbitControls } from 'OrbitControls';
 
@@ -50,7 +48,7 @@
 				renderer.render(scene, camera);
 			};
 
-			animate();]]>
-        </script>
-    </s:content>
-</s:article>
+			animate();
+</script>
+</body>
+</html>
