--- a/projects/net.splitcells.cin/src/main/html/net/splitcells/cin/renderer.fullscreen.html
+++ b/projects/net.splitcells.cin/src/main/html/net/splitcells/cin/renderer.fullscreen.html
@@ -8,8 +8,8 @@
 <div id="net-splitcells-canvas-main">
 
 </div>
-<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js" integrity="sha384-gwQPqZZlcr67jy5fNfBpA2gP268yZLb7+8Rf8cYh8OUjEOP3BO/g/E3LNpSGAjgL"></script>
-<script src="https://unpkg.com/papaparse@5.3.2/papaparse.min.js" integrity="sha384-6kRQDsV2kVYRSENnw7WnekWKCx8/Lmv7rFKpDuR2AoIbjlBShlYcs3x0QlE3kuRh"></script>
+<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js" integrity="sha384-gwQPqZZlcr67jy5fNfBpA2gP268yZLb7+8Rf8cYh8OUjEOP3BO/g/E3LNpSGAjgL" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/papaparse@5.3.2/papaparse.min.js" integrity="sha384-6kRQDsV2kVYRSENnw7WnekWKCx8/Lmv7rFKpDuR2AoIbjlBShlYcs3x0QlE3kuRh" crossorigin="anonymous"></script>
 <script type="importmap">
             {
             "imports": {
